overflow fixes

--- a/css/about.css
+++ b/css/about.css
@@ -11,7 +11,6 @@ section{
     align-items: center;
     margin: 0 auto;
     width: 90%;
-    max-width: 1000px;
     z-index: 0;
 }
 .left-image{
@@ -87,7 +86,6 @@ article p{
    align-items: center;
    margin: 250px auto;
    width: 90%;
-   max-width: 1000px;
    z-index: 0;
 }
 .left-booking-text{
